k8s/auth-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-deployment
  labels:
    app: authservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authservice
  template:
    metadata:
      labels:
        app: authservice
    spec:
      containers:
      - name: auth-service
        image: buihuy13/auth-service:latest
        ports:
        - containerPort: 8081
---
apiVersion: v1
kind: Service
metadata:
  name: auth-service
  labels:
    app: authservice
spec:
  ports:
  - port: 8081
    targetPort: 8081
    protocol: TCP
  selector:
    app: authservice
  type: ClusterIP
