k8s/gateway-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway-deployment
  labels:
    app: gatewayserver
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gatewayserver
  template:
    metadata:
      labels:
        app: gatewayserver
    spec:
      containers:
      - name: gateway-server
        image: Chưa có image
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: gateway-service
  labels:
    app: gatewayserver
spec:
  ports:
  - port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: gatewayserver
  type: LoadBalancer
