k8s/notification-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-deployment
  labels:
    app: notificationservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notificationservice
  template:
    metadata:
      labels:
        app: notificationservice
    spec:
      nodeSelector:
        agentpool: powerfulpool
      containers:
      - name: notification-service
        resources:
          requests:
            memory: "128Mi"
            cpu: "100m"
          limits:
            memory: "256Mi"
            cpu: "250m"
        image: quochuy1304acrregistry.azurecr.io/notification-service:latest
        ports:
        - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  labels:
    app: notificationservice
spec:
  ports:
  - port: 8083
    targetPort: 8083
    protocol: TCP
  selector:
    app: notificationservice
  type: ClusterIP
