k8s/order-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-deployment
  labels:
    app: orderservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orderservice
  template:
    metadata:
      labels:
        app: orderservice
    spec:
      nodeSelector:
        agentpool: powerfulpool
      containers:
      - name: order-service
        resources:
          requests:
            memory: "300Mi"
            cpu: "150m"
          limits:
            memory: "768Mi"
            cpu: "500m"
        image: quochuy1304acrregistry.azurecr.io/order-service:latest
        ports:
        - containerPort: 8085
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  labels:
    app: orderservice
spec:
  ports:
  - port: 8085
    targetPort: 8085
    protocol: TCP
  selector:
    app: orderservice
  type: ClusterIP
