k8s/payment-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-deployment
  labels:
    app: paymentservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: paymentservice
  template:
    metadata:
      labels:
        app: paymentservice
    spec:
      containers:
      - name: payment-service
        image: buihuy13/payment-service:latest
        ports:
        - containerPort: 8086
---
apiVersion: v1
kind: Service
metadata:
  name: payment-service
  labels:
    app: paymentservice
spec:
  ports:
  - port: 8086
    targetPort: 8086
    protocol: TCP
  selector:
    app: paymentservice
  type: ClusterIP
