k8s/product-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-deployment
  labels:
    app: productservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: productservice
  template:
    metadata:
      labels:
        app: productservice
    spec:
      nodeSelector:
        agentpool: powerfulpool
      containers:
      - name: product-service
        resources:
          requests:
            memory: "150Mi"
            cpu: "300m"
          limits:
            memory: "384Mi"
            cpu: "750m"
        image: quochuy1304acrregistry.azurecr.io/product-service:latest
        ports:
        - containerPort: 8084
---
apiVersion: v1
kind: Service
metadata:
  name: product-service
  labels:
    app: productservice
spec:
  ports:
  - port: 8084
    targetPort: 8084
    protocol: TCP
  selector:
    app: productservice
  type: ClusterIP
