k8s/service-discovery-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-discovery-deployment
  labels:
    app: service-discovery
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-discovery
  template:
    metadata:
      labels:
        app: service-discovery
    spec:
      nodeSelector:
        agentpool: powerfulpool
      containers:
      - name: service-discovery
        resources:
          requests:
            memory: "128Mi"
            cpu: "200m"
          limits:
            memory: "512Mi"
            cpu: "350m"
        image: quochuy1304acrregistry.azurecr.io/service-discovery:latest
        ports:
        - containerPort: 8761
---
apiVersion: v1
kind: Service
metadata:
  name: service-discovery
  labels:
    app: service-discovery
spec:
  ports:
  - port: 8761
    targetPort: 8761
    protocol: TCP
  selector:
    app: service-discovery
  type: ClusterIP
