k8s/user-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-deployment
  labels:
    app: userservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: userservice
  template:
    metadata:
      labels:
        app: userservice
    spec:
      containers:
      - name: user-service
        image: buihuy13/user-service:latest
        ports:
        - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
  labels:
    app: userservice
spec:
  ports:
  - port: 8082
    targetPort: 8082
    protocol: TCP
  selector:
    app: userservice
  type: ClusterIP
