k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
      name: frontend
      port:
        number: 80
  rules:
    - host:
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend
              port:
                number: 80
        - path: /api/
          pathType: Prefix
          backend:
            service:
              name: api-gateway
              port:
                number: 8080
